--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./wall.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+input,
+select {
+  box-sizing: border-box;
+  margin: 0.5rem 0;
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  border: none;
+  outline: none;
+  font-size: 1.1rem;
+  border-radius: 0.2rem;
+  opacity: 0.9;
+  transition: 0.2s ease-out;
+}
+
+select {
+  height: 2.1rem;
+  margin-bottom: 1.5rem;
+}
+input:focus,
+select:focus {
+  opacity: 1;
+}
+h5 {
+  margin: 0;
+}
+
+button {
+  width: 100%;
+  margin: 2rem 0 0 0;
+  padding: 0.4rem;
+  background: red;
+  border: none;
+  outline: none;
+  font-size: 1.1rem;
+  cursor: pointer;
+  color: white;
+  opacity: 0.8;
+  border-radius: 0.2rem;
+}
+
+button:hover {
+  opacity: 1;
+}
+
+button:active {
+  transform: translateY(2px) scale(0.99);
+}
+
+/* Loader */
+
+.LoaderContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
 }
